<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    app:startDestination="@id/onboarding">

    <fragment
        android:id="@+id/homepage"
        android:name="ru.kanogor.skillcinema.presentation.homepage.HomepageFragment"
        android:label="@string/homepage"
        tools:layout="@layout/fragment_homepage">
        <action
            android:id="@+id/action_homepage_to_listPage"
            app:destination="@id/listPage"
            app:enterAnim="@anim/nav_default_enter_anim"
            app:exitAnim="@anim/nav_default_exit_anim"
            app:popEnterAnim="@anim/nav_default_pop_enter_anim"
            app:popExitAnim="@anim/nav_default_pop_exit_anim"
            app:popUpTo="@id/homepage" />
        <action
            android:id="@+id/action_homepage_to_filmPage"
            app:destination="@id/filmPage"
            app:enterAnim="@anim/nav_default_enter_anim"
            app:exitAnim="@anim/nav_default_exit_anim"
            app:popEnterAnim="@anim/nav_default_pop_enter_anim"
            app:popExitAnim="@anim/nav_default_pop_exit_anim"
            app:popUpTo="@id/homepage" />
    </fragment>

    <fragment
        android:id="@+id/search"
        android:name="ru.kanogor.skillcinema.presentation.searchpage.SearchPageFragment"
        android:label="@string/search"
        tools:layout="@layout/fragment_search_page">
        <action
            android:id="@+id/action_Search_to_filmPage"
            app:destination="@id/filmPage"
            app:enterAnim="@anim/nav_default_enter_anim"
            app:exitAnim="@anim/nav_default_exit_anim"
            app:popEnterAnim="@anim/nav_default_pop_enter_anim"
            app:popExitAnim="@anim/nav_default_pop_exit_anim" />
    </fragment>

    <fragment
        android:id="@+id/profile"
        android:name="ru.kanogor.skillcinema.presentation.profilepage.ProfileFragment"
        android:label="@string/profile"
        tools:layout="@layout/fragment_profile">
        <action
            android:id="@+id/action_profile_to_filmPage"
            app:destination="@id/filmPage"
            app:enterAnim="@anim/nav_default_enter_anim"
            app:exitAnim="@anim/nav_default_exit_anim"
            app:popEnterAnim="@anim/nav_default_pop_enter_anim"
            app:popExitAnim="@anim/nav_default_pop_exit_anim" />
        <action
            android:id="@+id/action_profile_to_profileList"
            app:destination="@id/profileList"
            app:enterAnim="@anim/nav_default_enter_anim"
            app:exitAnim="@anim/nav_default_exit_anim"
            app:popEnterAnim="@anim/nav_default_pop_enter_anim"
            app:popExitAnim="@anim/nav_default_pop_exit_anim" />
    </fragment>

    <fragment
        android:id="@+id/listPage"
        android:name="ru.kanogor.skillcinema.presentation.listpage.ListPageFragment"
        android:label="@string/list_page"
        tools:layout="@layout/fragment_list_page">
        <action
            android:id="@+id/action_listPage_to_filmPage"
            app:destination="@id/filmPage"
            app:enterAnim="@anim/nav_default_enter_anim"
            app:exitAnim="@anim/nav_default_exit_anim"
            app:popEnterAnim="@anim/nav_default_pop_enter_anim"
            app:popExitAnim="@anim/nav_default_pop_exit_anim" />
        <action
            android:id="@+id/action_listPage_to_actorPage"
            app:destination="@id/actorPage"
            app:enterAnim="@anim/nav_default_enter_anim"
            app:exitAnim="@anim/nav_default_exit_anim"
            app:popEnterAnim="@anim/nav_default_pop_enter_anim"
            app:popExitAnim="@anim/nav_default_pop_exit_anim" />
    </fragment>

    <fragment
        android:id="@+id/filmPage"
        android:name="ru.kanogor.skillcinema.presentation.filmpage.FilmPageFragment"
        android:label="@string/film_page"
        tools:layout="@layout/fragment_film_page">
        <action
            android:id="@+id/action_filmPage_to_actorPage"
            app:destination="@id/actorPage"
            app:enterAnim="@anim/nav_default_enter_anim"
            app:exitAnim="@anim/nav_default_exit_anim"
            app:popEnterAnim="@anim/nav_default_pop_enter_anim"
            app:popExitAnim="@anim/nav_default_pop_exit_anim" />
        <action
            android:id="@+id/action_filmPage_to_listPage"
            app:destination="@id/listPage"
            app:enterAnim="@anim/nav_default_enter_anim"
            app:exitAnim="@anim/nav_default_exit_anim"
            app:popEnterAnim="@anim/nav_default_pop_enter_anim"
            app:popExitAnim="@anim/nav_default_pop_exit_anim" />
        <action
            android:id="@+id/action_filmPage_to_seasons"
            app:destination="@id/seasons"
            app:enterAnim="@anim/nav_default_enter_anim"
            app:exitAnim="@anim/nav_default_exit_anim"
            app:popEnterAnim="@anim/nav_default_pop_enter_anim"
            app:popExitAnim="@anim/nav_default_pop_exit_anim" />
        <action
            android:id="@+id/action_filmPage_to_gallery"
            app:destination="@id/gallery"
            app:enterAnim="@anim/nav_default_enter_anim"
            app:exitAnim="@anim/nav_default_exit_anim"
            app:popEnterAnim="@anim/nav_default_pop_enter_anim"
            app:popExitAnim="@anim/nav_default_pop_exit_anim" />
    </fragment>

    <fragment
        android:id="@+id/actorPage"
        android:name="ru.kanogor.skillcinema.presentation.actorpage.ActorPageFragment"
        android:label="@string/actor_page"
        tools:layout="@layout/fragment_actor_page">
        <action
            android:id="@+id/action_actorPage_to_filmPage"
            app:destination="@id/filmPage"
            app:enterAnim="@anim/nav_default_enter_anim"
            app:exitAnim="@anim/nav_default_exit_anim"
            app:popEnterAnim="@anim/nav_default_pop_enter_anim"
            app:popExitAnim="@anim/nav_default_pop_exit_anim" />
        <action
            android:id="@+id/action_actorPage_to_filmography"
            app:destination="@id/filmography"
            app:enterAnim="@anim/nav_default_enter_anim"
            app:exitAnim="@anim/nav_default_exit_anim"
            app:popEnterAnim="@anim/nav_default_pop_enter_anim"
            app:popExitAnim="@anim/nav_default_pop_exit_anim" />
    </fragment>
    <fragment
        android:id="@+id/seasons"
        android:name="ru.kanogor.skillcinema.presentation.seasons.SeasonsFragment"
        android:label="@string/seasons"
        tools:layout="@layout/fragment_seasons" />
    <fragment
        android:id="@+id/filmography"
        android:name="ru.kanogor.skillcinema.presentation.filmography.FilmographyFragment"
        android:label="@string/filmography_label"
        tools:layout="@layout/fragment_filmography">
        <action
            android:id="@+id/action_filmography_to_filmPage"
            app:destination="@id/filmPage"
            app:enterAnim="@anim/nav_default_enter_anim"
            app:exitAnim="@anim/nav_default_exit_anim"
            app:popEnterAnim="@anim/nav_default_pop_enter_anim"
            app:popExitAnim="@anim/nav_default_pop_exit_anim" />
    </fragment>

    <fragment
        android:id="@+id/gallery"
        android:name="ru.kanogor.skillcinema.presentation.gallery.GalleryFragment"
        android:label="@string/gallery_label"
        tools:layout="@layout/fragment_gallery" />

    <fragment
        android:id="@+id/profileList"
        android:name="ru.kanogor.skillcinema.presentation.profilepage.listpage.ProfileListFragment"
        android:label="profile_list"
        tools:layout="@layout/fragment_profile_list">
        <action
            android:id="@+id/action_profileList_to_filmPage"
            app:destination="@id/filmPage"
            app:enterAnim="@anim/nav_default_enter_anim"
            app:exitAnim="@anim/nav_default_exit_anim"
            app:popEnterAnim="@anim/nav_default_pop_enter_anim"
            app:popExitAnim="@anim/nav_default_pop_exit_anim" />
    </fragment>

    <fragment
        android:id="@+id/splash"
        android:name="ru.kanogor.skillcinema.presentation.splash.SplashFragment"
        android:label="@string/splash"
        tools:layout="@layout/fragment_splash">
        <action
            android:id="@+id/action_splash_to_homepage"
            app:destination="@id/homepage"
            app:enterAnim="@anim/nav_default_enter_anim"
            app:exitAnim="@anim/nav_default_exit_anim"
            app:popEnterAnim="@anim/nav_default_pop_enter_anim"
            app:popExitAnim="@anim/nav_default_pop_exit_anim"
            app:popUpTo="@id/nav_graph"
            app:popUpToInclusive="true" />
    </fragment>

    <fragment
        android:id="@+id/onboarding"
        android:name="ru.kanogor.skillcinema.presentation.splash.OnboardingFragment"
        android:label="@string/onboarding"
        tools:layout="@layout/fragment_onboarding">
        <action
            android:id="@+id/action_onboarding_to_splash"
            app:destination="@id/splash"
            app:enterAnim="@anim/nav_default_enter_anim"
            app:exitAnim="@anim/nav_default_exit_anim"
            app:popEnterAnim="@anim/nav_default_pop_enter_anim"
            app:popExitAnim="@anim/nav_default_pop_exit_anim"
            app:popUpTo="@id/splash"
            app:popUpToInclusive="true" />
    </fragment>


</navigation>